--- a/assign2/2/report/report.tex
+++ b/assign2/2/report/report.tex
@@ -71,9 +71,9 @@ Figure 3 and 4 show the blurred images and their respective recontructions from 
 \subsection{RRMSE vs L}
 When L(Cutoff frequency) is small and close to zero the filter attenuates very low frequencies along with high frequencies as a results of which frequencies consising if useful information goes to zero, hence the error rates are very high.
 
-One the other end when L is large the high frequencies contributing as noise do not get attenuated and increases the reconstruction error.
+On the other end when L is large the high frequencies contributing as noise do not get attenuated and increases the reconstruction error.
 
-The RRMSE is minimum somewhere in between $0$ and $w_{max}$. In very blurred images because the high frequency signals are already attenuated the RRMSE does not increases by large amount after reaching minima as shown in Figure 7.
+The RRMSE is minimum somewhere in between $0$ and $w_{max}$. In highly blurred images because the high frequency signals are already attenuated the RRMSE does not increase by large amount after reaching minima as shown in Figure 7.
 \begin{figure}[!h]
 \centering
 \includegraphics[scale=0.45]{RRMSE0}
